--- a/BasicDemo/slideShow.css
+++ b/BasicDemo/slideShow.css
@@ -31,7 +31,9 @@ a{
 
 .container .buttons{
     position:absolute;
-    right: 20px;
+    text-align: center;
+    vertical-align: middle;
+    left: 355px;
     bottom: 25px;
     width: 250px;
     height: 10px;
@@ -41,8 +43,8 @@ a{
 .container .buttons span{
     margin-left: 5px;
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 22px;
+    height: 22px;
     border-radius: 50%;
     background-color: green;
     text-align: center;
